[package]
name = "lettura"
version = "0.1.1"
description = "Your RSS reader"
authors = ["zhanglun1410@gmail.com"]
license = ""
repository = ""
default-run = "lettura"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["devtools", "dialog-all", "fs-all", "http-all", "shell-open", "system-tray", "updater"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
rss = { version="2.0", features = ["serde"] }
atom_syndication = { version = "0.11.0", features = [ "with-serde" ] }
chrono = { version="0.4", features = ["serde"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
dotenv = "0.15.0"
uuid = { version = "1.2.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
toml = "0.5"
scraper = "0.13.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
