[package]
name = "lettura"
version = "0.1.14"
description = "Your RSS reader"
authors = ["zhanglun1410@gmail.com"]
license = ""
repository = ""
default-run = "lettura"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4", features = ["devtools", "dialog-all", "fs-all", "http-all", "shell-open", "system-tray", "updater"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
chrono = { version="^0.4", features = ["serde"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid", "returning_clauses_for_sqlite_3_35", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
dotenv = "0.15.0"
uuid = { version = "1.2.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
toml = "0.7.3"
scraper = "0.17.1"
regex = "1"
feed-rs = "1.3.0"
url="*"
base64="*"
once_cell = "*"
log= { version = "^0.4" }
env_logger="*"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"]  }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
actix-web = "4.4.0"
actix-cors = "*"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
