[package]
name = "lettura"
version = "0.1.22"
description = "Follow your favorite content and never miss a story"
authors = ["zhanglun1410@gmail.com"]
license = ""
repository = "https://github.com/zhanglun/lettura"
default-run = "lettura"
edition = "2021"
build = "src/build.rs"

[lib]
name = "lettura_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["devtools", "tray-icon"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = { version = "1", features = ["full"] }
chrono = { version="^0.4", features = ["serde"] }
diesel = { version = "2.0.2", features = ["sqlite", "chrono", "uuid", "returning_clauses_for_sqlite_3_35", "serde_json"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version = "^0", features = ["bundled"] }
dotenv = "0.15.0"
uuid = { version = "1.2.1", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
toml = "0.7.3"
scraper = "0.17.1"
regex = "1"
feed-rs = "1.3.0"
url="*"
base64="*"
once_cell = "*"
log= { version = "^0.4" }
env_logger="*"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
actix-web = "4.4.0"
actix-cors = "*"
sys-info = "0.9"
async-openai = { version = "0.36", features = ["embedding", "chat-completion"] }
async-trait = "0.1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
